--- a/index.html
+++ b/index.html
@@ -1,19 +1,13 @@
-<html>
-    <head>
-        <title>Title</title>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
-    </head>
-    <body>
-        <model-viewer
-          ar
-          ar-modes="scene-viewer webxr quick-look"
-          src="./radio.glb"
-          alt="radicase"
-          auto-rotate
-          camera-controls
-        ></model-viewer>
-        <br>
-    </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <p><a href="aframe.html">A-Frame</a></p>
+    <p><a href="modelviewer.html">Model-Viewer</a></p>
+</body>
 </html>
