--- a/aframe.html
+++ b/aframe.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <a-scene>
-      <a-gltf-model src="monstaer_4-1.glb" position="0 2 -3" rotation="0 30 0" ></a-gltf-model>
+      <a-gltf-model src="monstaer_4-1min.glb" position="0 2 -3" rotation="0 30 0" ></a-gltf-model>
     </a-scene>
 </body>
 </html>
