--- a/aframe.html
+++ b/aframe.html
@@ -7,7 +7,8 @@
 </head>
 <body>
     <a-scene>
-      <a-gltf-model src="monstaer_4-1min.glb" position="0 2 -3" rotation="0 10 0" ></a-gltf-model>
+        <a-entity camera look-controls orbit-controls="target: 0 1.6 -0.5; maxPolarAngle:180; minDistance: 0.5; maxDistance: 200; initialPosition: 0 0 30"></a-entity>
+      <a-gltf-model src="monstaer_4-1min.glb" position="0 2 -3" rotation="0 30 0" ></a-gltf-model>
     </a-scene>
 </body>
 </html>
